y as gehele getallen

--- a/WpfApp1/GraderView.xaml
+++ b/WpfApp1/GraderView.xaml
@@ -21,7 +21,9 @@
             </lvc:CartesianChart.AxisX>
             <lvc:CartesianChart.AxisY>
                 <lvc:Axis Title="BoxCount">
-                    
+                    <lvc:Axis.Separator>
+                        <lvc:Separator Step="1"/>
+                    </lvc:Axis.Separator>
                 </lvc:Axis>
             </lvc:CartesianChart.AxisY>
         </lvc:CartesianChart>
